fix-padcast-section-z-index

--- a/assets/css/partials/_reboot.scss
+++ b/assets/css/partials/_reboot.scss
@@ -22,8 +22,6 @@ body {
   background-position:
   top left,
   bottom right;
-  // overflow-x: hidden;
-  z-index: -1;
 }
 
 * {
